# mvp_demo

./: Dockerfile  README.md  home.py  packages.txt  pyproject.toml  requirements.txt
pages/: 2_🔎_pdf_processing.py  3_📝_edit_text.py  3_📝_process_text.py  4_🔊_generate_audio.py
