[build-system]
requires = [
    "setuptools >= 65",
    "wheel >= 0.38",
]
build-backend = "setuptools.build_meta"

[project]
name = "klang_verso_mvp"
authors = [{name = "Justin Bui", email = "jmbui@klangverso.com"}]
version = "0.1.0"
requires-python = ">=3.8"
dependencies = [
    "kv_image_pipeline",
    "kv_audio_pipeline",
    "kv_text_to_speech",
    "kv_text_processing",
    "streamlit",
    "pytesseract",
    "pypdf2"]